--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -18,17 +18,22 @@
   border-radius: 3px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-  width: 50vw;
+  width: 35vw;
   padding: 3vw;
 }
 
-.signup__overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.76);
+.loginFormContainer {
+  background-color: white;
+  display: flex;
+  gap: 3vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 3px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
+    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  width: 30vw;
+  padding: 3vw;
 }
 
 label {
@@ -37,10 +42,64 @@ label {
   color: #ccc;
 }
 
-.form-control {
+.formGroup {
+  display: flex;
+  flex-direction: column;
+}
+
+.formControl {
   background-color: transparent;
   border-top: 0;
   border-right: 0;
   border-left: 0;
   border-radius: 0;
+  border-width: 1px;
+  border-color: #cccccc;
+  width: 10vw;
+  padding: 0.375rem 0.75rem;
+  line-height: 1.5;
+  width: 100%;
+}
+
+.formControl:focus {
+  border-color: #111;
+}
+
+.passwordForm {
+  margin-bottom: 16px;
+}
+
+::placeholder {
+  color: #999999;
+}
+
+.formButtonContainer {
+  display: flex;
+  gap: 1vw;
+  margin-top: 3vh;
+  align-items: center;
+  justify-content: center;
+}
+
+.formButtonContainer > div > p {
+  font-size: 0.8rem;
+  font-weight: 600;
+  margin: 0;
+}
+
+.signInLinkContainer {
+  display: flex;
+  gap: 5px;
+}
+
+.signInLink {
+  font-size: 0.8rem;
+  font-weight: 600;
+  text-decoration: underline;
+  color: #999;
+}
+
+.signInLink:focus,
+.signInLink:hover {
+  color: darken(#999, 13%);
 }
