--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,10 @@ code {
 
 form {
   margin: 0 auto;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 input,
