--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -1,6 +1,7 @@
 .registerContainer {
   background: #e9e9e9;
-  height: 90vh;
+  min-height: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,7 +19,7 @@
   border-radius: 3px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-  width: 35vw;
+  width: 30vw;
   padding: 3vw;
 }
 
